--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,9 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
+  graphql:
+    graphiql:
+      enabled: true
 
 
   liquibase:
