configure maven compiler plugin set suppressUnmapped=true and add annotations to mappers

--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,15 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>-Amapstruct.suppressUnmapped=true</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
