--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,11 @@
         <annotations.version>24.0.1</annotations.version>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <postgresql-container.version>1.18.3</postgresql-container.version>
-        <junit-platfrom-suite-engine.version>1.10.0</junit-platfrom-suite-engine.version>
         <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
         <spring-security-test.version>6.1.5</spring-security-test.version>
         <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
+        <xml-format.version>3.2.2</xml-format.version>
+        <checkstyle.version>3.2.2</checkstyle.version>
     </properties>
 
     <dependencies>
@@ -260,6 +261,51 @@
                         <include>*IT.java</include>
                     </includes>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>${checkstyle.version}</version>
+                <configuration>
+                    <configLocation>sun_checks.xml</configLocation>
+                    <consoleOutput>true</consoleOutput>
+                    <failsOnError>true</failsOnError>
+                    <linkXRef>false</linkXRef>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>validate</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
+                            <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>au.com.acegi</groupId>
+                <artifactId>xml-format-maven-plugin</artifactId>
+                <version>${xml-format.version}</version>
+                <executions>
+                    <execution>
+                        <id>xml-format</id>
+                        <goals>
+                            <goal>xml-format</goal>
+                        </goals>
+                        <configuration>
+                            <indentSize>4</indentSize>
+                            <keepBlankLines>true</keepBlankLines>
+                            <lineEnding>LF</lineEnding>
+                            <includes>pom.xml</includes>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
 
         </plugins>
