--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <graphql-java-extended-scalars.version>21.0</graphql-java-extended-scalars.version>
         <annotations.version>24.0.1</annotations.version>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <postgresql-container.version>1.18.3</postgresql-container.version>
     </properties>
 
     <dependencies>
@@ -160,6 +161,14 @@
             <artifactId>annotations</artifactId>
             <version>${annotations.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql-container.version}</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
