--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <java.version>17</java.version>
         <postgresql.version>42.6.0</postgresql.version>
         <lombok.version>1.18.30</lombok.version>
+        <shakeyaml.version>2.0</shakeyaml.version>
         <hibernate.validator.version>8.0.1.Final</hibernate.validator.version>
         <jakarta.validation-api.version>3.0.2</jakarta.validation-api.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
@@ -33,6 +34,8 @@
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <postgresql-container.version>1.18.3</postgresql-container.version>
         <junit-platfrom-suite-engine.version>1.10.0</junit-platfrom-suite-engine.version>
+        <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
+        <spring-security-test.version>6.1.5</spring-security-test.version>
     </properties>
 
     <dependencies>
@@ -67,6 +70,20 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>${spring-security-test.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>${shakeyaml.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.liquibase</groupId>
@@ -181,6 +198,7 @@
 
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -193,7 +211,27 @@
                     </excludes>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
-
 </project>
