--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,8 +6,8 @@ spring:
     username: ${POSTGRES_USERNAME}
     password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
-  jpa:
-    show-sql: true
+#  jpa:
+#    show-sql: true
   graphql:
     graphiql:
       enabled: true
