--- a/.github/workflows/maven-build.yaml
+++ b/.github/workflows/maven-build.yaml
@@ -1,4 +1,5 @@
 name: maven-build
+
 on:
   push:
     branches: [ "master" ]
@@ -6,18 +7,31 @@ on:
     branches: [ "master" ]
 
 jobs:
-  checkstyle:
+  maven-build:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Java
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: 17
-      - uses: actions/cache@v3
+
+      - name: Cache Maven dependencies
+        uses: actions/cache@v2
         with:
-          path: ~/.m2/repository
+          path: |
+            ~/.m2/repository
           key: maven-${{ hashFiles('**/pom.xml')}}
           restore-keys: |
             maven-
-      - run: mvn clean install
+
+      - name: Set up Testcontainers
+        uses: atomicjar/testcontainers-cloud-setup-action@v1
+        with:
+          token: ${{ secrets.TC_CLOUD_TOKEN }}
+
+      - name: Build and test with Maven
+        run: mvn clean install
