--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,8 +6,13 @@ spring:
     username: ${POSTGRES_USERNAME}
     password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
-  #  jpa:
-  #    show-sql: true
+
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
   graphql:
     graphiql:
       enabled: true
@@ -16,9 +21,9 @@ spring:
     change-log: classpath:liquibase/db.changelog.yaml
     enabled: true
 
+
 security:
   jwt:
-#    secret: ${JWT_SECRET}
     access: 1
     refresh: 30
 
