--- a/pom.xml
+++ b/pom.xml
@@ -281,7 +281,7 @@
                 <executions>
                     <execution>
                         <id>integration-tests</id>
-                        <phase>test</phase>
+                        <phase>verify</phase>
                         <goals>
                             <goal>integration-test</goal>
                             <goal>verify</goal>
@@ -333,8 +333,8 @@
                             <goal>check</goal>
                         </goals>
                         <configuration>
-                            <suppressionsFileExpression/>
-                            <suppressionsLocation/>
+                            <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
+                            <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
                         </configuration>
                     </execution>
                 </executions>
