--- a/.github/workflows/doker.yaml
+++ b/.github/workflows/doker.yaml
@@ -16,7 +16,7 @@ jobs:
       - uses: docker/setup-buildx-action@v2
       - uses: mr-smithers-excellent/docker-build-push@v5
         with:
-          image: ${{ secrets.DOCKERHUB_USERNAME }}/parking-reservation-system
+          image: ${{ secrets.DOCKERHUB_USERNAME }}/prs_backend
           tags: 0.0.$GITHUB_RUN_NUMBER, latest
           dockerfile: Dockerfile
           registry: docker.io
