--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     </parent>
 
     <groupId>ru.ryazancev</groupId>
-    <artifactId>parking-reservation-system</artifactId>
+    <artifactId>parkme_server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>parking-reservation-system</name>
-    <description>parking-reservation-system</description>
+    <name>parkme_server</name>
+    <description>parkme_server</description>
 
     <properties>
         <java.version>17</java.version>
